--- a/index.html
+++ b/index.html
@@ -1,18 +1,50 @@
 <!DOCTYPE html>
-<html lang="en"> 
     <head> 
         <meta charset="UTF-8">
-        <meta name="viewport" content="width-device-width, initial-scale=1.0">
-        <title>Primeiro texto</title> 
+        <meta name="viewport" content="width-device-width, initial-scale=1.0"> 
+        <link rel="stylesheet" href="style.css">
+        <title>Ação contra a mudança global do clima</title> 
 </head>
 <body> 
-    <h1>Este é o seu titulo</h1>
-    <p>Aqui estara em primeira mão o site do meu curso</p>
-    <img src="imagem/grupo-energisa.webp" width="300px" alt="aqui estara a sua imagem">
-</body>
-</html>
-      
-   
-    
+    <h1>Obejtivo de desenvolvimento sustentável - ODS</h1>
+    <h2>Tomar medidas urgentes para combater a mudanca climatica e seus impacots
+    <div class="container"> 
+        <div class="imagem-container">
+            <img src="./imagem/ods13.webp" alt="Ods 13">
+        </div>
+        <div class="texto"> 
+            <h3>O que significa ODS, e qual sua finalidade para o meio ambiente?</h3>
+            <p>A ação contra a mudança global do clima é a ODS 13, que por se tem como objetivo tomar medidas urgentes para combater a mudança climatica e seus impactos. A mudança climatica é um dos maiores desafios da atualidade,afetando milhões de pessoas em todo o mundo e ameaçando o ecossistema.</p>
+            <p>Com isso,as emissões de gases de efeito estufa aumentaram signifcamente nos ultimos anos,resultanto em eventos climaticos extremos,como furacoessecas e inundações. A adoção de ações para mitigar esses efeitos e preparar as comunidades para enfrentar as mudanças climaticas.</p>
+        </div>
+
+      <div class="paragrafos">
+            <p>Qual objetivo da ODS 13?</p>
+            <p> - Promover mecanismos para aumentar a capacidade de planejamento e de gestão eficaz em relação às mudanças climáticas nos países menos desenvolvidos</p>
+            <p> - Melhorar a educação, a conscientização e a capacidade humana e institucional sobre as mudanças climáticas, a redução de seus efeitos e o alerta precoce</p>
+             <p> - Incluir medidas relativas às mudanças climáticas nas políticas, estratégias e planos nacionais. </p>
+            <p> - Fortalecer a resiliência e a capacidade de adaptação aos riscos relacionados ao clima e aos desastres naturais em todos os países.</p>
+            <div> 
+        <p>Quais ferramentas devemos tomar para cuidar do nosso ambiente?</p>
+        <p>A economia de energia em casa é um dos caminhos mais acessíveis para a proteção do meio ambiente. Não é necessário fazer grandes investimentos ou sacrifícios significativos para reduzir o consumo de energia. Algumas mudanças simples em nossos hábitos diários podem resultar em economia financeira e em um ambiente mais sustentável.</p>
+    </div> 
+        <p>Qual importância da ODS 13?</p>
+        <p>O ODS 13 foca na necessidade de adotar medidas urgentes para acabar com as mudanças climáticas que afetam todos os países do mundo. De acordo com a ONU, os cientistas dedicados às questões climáticas já demonstraram que as pessoas são as responsáveis pelo aquecimento global dos últimos 200 anos. As atividades humanas, como a queima de combustíveis fósseis, o desmatamento, a perda de florestas ou as atividades agrícolas e pecuárias que usam fertilizantes e outros produtos químicos, têm sido os principais causadores das mudanças climáticas. </p>
+        <p>Tal como revela o Painel Intergovernamental sobre Mudanças Climáticas (IPCC), é essencial reduzir de forma radical, rápida e sustentável as emissões de gases de efeito estufa (GEE) em todos os setores e manter essas medidas ao longo da década. Em seu último relatório de síntese, o IPCC afirma de forma inequívoca que as atividades humanas, em especial mais de um século de queima de combustíveis fósseis, uso insustentável de energia e da terra e padrões insustentáveis de consumo e produção, causaram um aquecimento global de 1,1°C acima dos níveis pré-industriais. Para limitar o aquecimento global a 1,5°C acima dos níveis pré-industriais, as emissões já deveriam estar diminuindo e precisam ser reduzidas quase à metade até 2030. </p>
+        <p>Os eventos climáticos extremos estão se tornando mais frequentes e intensos e já estão causando impacto em todas as regiões. Entre 2010 e 2020, as regiões com altos índices de vulnerabilidade, que abrigam aproximadamente de 3,3 a 3,6 bilhões de pessoas, apresentaram taxas de mortalidade humana por enchentes, secas e tempestades 15 vezes mais altas do que as de regiões com vulnerabilidade muito baixa. Além disso, de acordo com a Organização Mundial da Saúde (OMS), espera-se que as mudanças climáticas causem mais 250.000 mortes por ano entre 2030 e 2050. Atualmente, a poluição e as substâncias tóxicas causam pelo menos nove milhões de mortes prematuras por ano em todo o mundo. </p>
+        <p>Reverter os valores mencionados anteriormente só é possível atuando em âmbito mundial, a partir de todas as áreas e com firmeza. Por isso, adotar medidas urgentes para lutar contra as mudanças climáticas se converteu no ODS 13 dos 17 Objetivos de Desenvolvimento Sustentável da ONU, aprovados em setembro de 2015 como parte da Agenda 2030.</p>
+
+        <footer>
+            <div class="footer-container">
+                <p>&copy; 2024 MeuSite. Todos os direitos reservados.</p>
+                <div class="social-media">
+                    <a href="#" class="social-icon">Facebook</a>
+                    <a href="#" class="social-icon">Twitter</a>
+                    <a href="#" class="social-icon">Instagram</a>
+                </div>
+            </div>
+        </footer>
+    </body>
+    </html>   
  
    
